:bug: Map infos overflow

--- a/app/assets/styles/map/map.styl
+++ b/app/assets/styles/map/map.styl
@@ -1,3 +1,7 @@
+.mapWrapper
+  width 100vw
+  height 100vh
+
 .map
   height 100vh
   width 100vw
@@ -15,7 +19,7 @@
   position fixed
   top 0
   right -100%
-  overflow scroll
+  overflow auto
 
   &__title
     font-family 'DIN'
